fixed appointment service using diff language level